fixed text overflowing into clear button

--- a/src/app/shared/components/textbox/textbox.component.scss
+++ b/src/app/shared/components/textbox/textbox.component.scss
@@ -10,11 +10,16 @@ mat-form-field {
   flex: 1;
 }
 
+input {
+  max-width: 80%;
+}
+
 app-x-icon {
   width: 30px;
   height: 15px;
   display: flex;
   flex-direction: column;
+  padding: 2px;
 
   position: fixed;
   right: 5%;
